# CoCap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/compressed_video/: base.yaml  msrvtt_captioning.yaml  msvd_captioning.yaml  vatex_captioning.yaml
dataset/: README.md
mm_video/: __init__.py  run_net.py  torchrun_net.py
mm_video/config/: __init__.py  base.py  base_config.py  registry.py
mm_video/config/custom_config/: __init__.py  compressed_video.py
mm_video/data/: __init__.py  build.py
mm_video/data/datasets/: __init__.py
mm_video/layers/: README.md  __init__.py  bert.py
mm_video/layers/clip/: clip.py  model.py
mm_video/modeling/: __init__.py  loss.py  meter.py  model.py  optimization.py  optimizer.py
mm_video/modeling/common/: __init__.py  common_meter.py
mm_video/modeling/compressed_video/: __init__.py  compressed_video_transformer.py  loss_function.py  modeling.py  optimization.py
mm_video/runner/: runner.py
mm_video/tools/: __init__.py  checkpoint_tweak.py
mm_video/trainer/: __init__.py  build.py  cocap_trainer.py  trainer.py  trainer_utils.py
mm_video/utils/: __init__.py  checkpoint.py  image.py  json.py  logging.py  profile.py  registry.py  train_utils.py  video.py  visualize.py  writer.py
model_zoo/: README.md  download_model.sh  urls.txt
test/: __init__.py
test/data/: __init__.py
test/modeling/: __init__.py
test/utils/: __init__.py  test_train_utils.py
tools/: check_video_integrity.py  checkpoint_tweak.py  compute_cider.py  show_registry.py  video_convert.py
(+13 files in other folders)
